1. Fixed button css for teams/show 2. Fixed some whitespace on teams index and show.

--- a/app/assets/stylesheets/team_show_page.css.scss
+++ b/app/assets/stylesheets/team_show_page.css.scss
@@ -70,6 +70,11 @@ body > div > div > a.button.tiny.edit {
   text-align: center;
 }
 
+#not-logged-in-comment-button {
+  text-align: center;
+}
+
+
 #edit-delete-comment-buttons {
   margin-left: 100px;
 }
